add: api /total/info
